# joint_estimation

./: README.md  package.xml
joint_estimation/: CMakeLists.txt  package.xml
joint_estimation/include/joint_estimation/: Filter.h  VelocityEstimator.h  config.h  joint_estimation.h  mechanics.h  vector3d.h
joint_estimation/launch/: Mag_3110_Driver.launch  joint_read_estimates.launch  mag_3110_driver.launch
joint_estimation/msg/: AxesValues.msg
joint_estimation/scripts/: mag3110.py  mag3110_driver.py
joint_estimation/src/: Filter.cpp  VelocityEstimator.cpp  joint_estimation.cpp  mechanics.cpp  vector3d.cpp
scripts/: install_project.sh
