<?xml version="1.0"?>
<package>
  <name>joint_estimation</name>
  <version>0.0.0</version>
  <description>The joint_estimation package</description>

  <maintainer email="robert.griffin@vt.edu">Robert Griffin</maintainer>
  <license>TREC</license>
  <author email="robert.griffin@vt.edu">Robert Griffin</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
